Swagger users, lessons, subjects - done. Courses - WIP
