# docs/swagger.yaml
@@ -18,6 +18,51 @@ definitions:
       error:
         type: string
     type: object
+  models.Lesson:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      duration_sec:
+        type: integer
+      id:
+        type: integer
+      interest:
+        type: string
+      is_published:
+        type: boolean
+      level:
+        type: string
+      order:
+        type: integer
+      subject_id:
+        description: under question
+        type: integer
+      target_age_max:
+        type: integer
+      target_age_min:
+        type: integer
+      title:
+        type: string
+      updated_at:
+        type: string
+      video_data:
+        items:
+          type: integer
+        type: array
+      video_filename:
+        type: string
+      video_mime_type:
+        type: string
+    type: object
+  models.Subject:
+    properties:
+      id:
+        type: integer
+      title:
+        type: string
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open.api/
@@ -35,7 +80,397 @@ info:
   title: EdTech API
   version: "1.0"
 paths:
-  /core/V1/user/profile:
+  /lessons:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Lesson'
+            type: array
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: Find all lessons
+      tags:
+      - lessons
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Lesson_title
+        in: query
+        name: title
+        required: true
+        type: string
+      - description: Lesson_description
+        in: query
+        name: description
+        required: true
+        type: string
+      - description: Lesson_subject_id
+        in: query
+        name: subject_id
+        required: true
+        type: integer
+      - description: Topic_order
+        in: query
+        name: order
+        required: true
+        type: integer
+      - description: Lessons_level
+        in: query
+        name: level
+        required: true
+        type: string
+      - description: Lessons_interest
+        in: query
+        name: interest
+        required: true
+        type: string
+      - description: minimum age for viewing lesson
+        in: query
+        name: target_age_min
+        required: true
+        type: integer
+      - description: maximum age for viewing lesson
+        in: query
+        name: target_age_max
+        required: true
+        type: integer
+      - description: Lessons_video
+        in: query
+        name: video_data
+        required: true
+        type: string
+      - description: Lessons_video_filename
+        in: query
+        name: video_filename
+        required: true
+        type: string
+      - description: Lessons_video_MIME-type
+        in: query
+        name: video_mime_type
+        required: true
+        type: string
+      - description: Lessons_video_duration_seconds
+        in: query
+        name: duration_sec
+        required: true
+        type: string
+      - description: lessons_video_is_published
+        in: query
+        name: is_published
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              id:
+                type: integer
+            type: object
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: Create Lesson
+      tags:
+      - lessons
+  /lessons/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Lesson_id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: delete lesson by id
+      tags:
+      - lessons
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Lesson_id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Lesson'
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: find lesson by id
+      tags:
+      - lessons
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Lesson_id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Lesson_title
+        in: query
+        name: title
+        required: true
+        type: string
+      - description: Lesson_description
+        in: query
+        name: description
+        required: true
+        type: string
+      - description: Lesson_subject_id
+        in: query
+        name: subject_id
+        required: true
+        type: integer
+      - description: Topic_order
+        in: query
+        name: order
+        required: true
+        type: integer
+      - description: Lessons_level
+        in: query
+        name: level
+        required: true
+        type: string
+      - description: Lessons_interest
+        in: query
+        name: interest
+        required: true
+        type: string
+      - description: minimum age for viewing lesson
+        in: query
+        name: target_age_min
+        required: true
+        type: integer
+      - description: maximum age for viewing lesson
+        in: query
+        name: target_age_max
+        required: true
+        type: integer
+      - description: Lessons_video
+        in: query
+        name: video_data
+        required: true
+        type: string
+      - description: Lessons_video_filename
+        in: query
+        name: video_filename
+        required: true
+        type: string
+      - description: Lessons_video_MIME-type
+        in: query
+        name: video_mime_type
+        required: true
+        type: string
+      - description: Lessons_video_duration_seconds
+        in: query
+        name: duration_sec
+        required: true
+        type: string
+      - description: lessons_video_is_published
+        in: query
+        name: is_published
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              id:
+                type: integer
+            type: object
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: Update Lesson
+      tags:
+      - lessons
+  /subjects:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Subject'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: find all subjects
+      tags:
+      - subjects
+  /subjects/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Subject_id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: delete subject by id
+      tags:
+      - subjects
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Subject_id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Subject'
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: find subject by id
+      tags:
+      - subjects
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Subject_title
+        in: query
+        name: title
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              id:
+                type: integer
+            type: object
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: create subject
+      tags:
+      - subjects
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Subject_title
+        in: query
+        name: title
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Invalid Payload
+          schema:
+            $ref: '#/definitions/models.ApiError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ApiError'
+      summary: update subject
+      tags:
+      - subjects
+  /users:
     get:
       consumes:
       - application/json
@@ -105,10 +540,16 @@ paths:
       summary: Create User
       tags:
       - users
-  /core/V1/user/profile/{uuid}:
+  /users/{uuid}:
     delete:
       consumes:
       - application/json
+      parameters:
+      - description: User UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -128,6 +569,12 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: User UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -152,6 +599,11 @@ paths:
       consumes:
       - application/json
       parameters:
+      - description: User UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
       - description: User Name
         in: query
         name: name
@@ -183,10 +635,16 @@ paths:
       summary: Update User
       tags:
       - users
-  /core/V1/user/profile/{uuid}/activate:
+  /users/{uuid}/activate:
     patch:
       consumes:
       - application/json
+      parameters:
+      - description: User UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -203,11 +661,16 @@ paths:
       summary: set user status to active
       tags:
       - users
-  /core/V1/user/profile/{uuid}/changePassword:
+  /users/{uuid}/changePassword:
     patch:
       consumes:
       - application/json
       parameters:
+      - description: User UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
       - description: Password
         in: query
         name: password
@@ -229,10 +692,16 @@ paths:
       summary: ChangePassword User
       tags:
       - users
-  /core/V1/user/profile/{uuid}/deactivate:
+  /users/{uuid}/deactivate:
     patch:
       consumes:
       - application/json
+      parameters:
+      - description: User UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
       produces:
       - application/json
       responses:
